update tests to verify scenarios pass